/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.driver";
option java_multiple_files = true;

message XtsTradefedTestDriverSpec {
  extend DriverSpec {
    optional XtsTradefedTestDriverSpec ext = 514943769;
  }

  optional string xts_type = 1 [(field_detail) = {
    help: "The type of xts. Current supported types include CTS."
    is_required: true
  }];

  optional string xts_root_dir = 2 [(field_detail) = {
    help: "The directory contains xTS test cases, dependencies, libs, etc. "
          "Usually it's the root directory of the unzipped android-xts.zip "
          "file."
  }];

  optional string android_xts_zip = 3 [(file_detail) = {
    help: "The android-xts.zip file which is the xTS standalone package. It "
          "will only unzip this zip file to run xTS test suites when "
          "'xts_root_dir' is not given."
  }];

  optional string xts_test_plan = 4 [
    (field_detail) = { help: "The test plan for xTS to run." is_required: true }
  ];

  optional string run_command_args = 5
      [(field_detail) = { help: "The args passed to xTS 'run' command." }];

  repeated string leading_jars_in_classpath = 6 [(field_detail) = {
    help: "A list of JAVA JAR file names. Used JARs by TF that match any of "
          "the given JARs will be put at the front of classpath that passed to "
          "TF. For example, 'tradefed.jar' means the JARs have name "
          "'tradefed.jar' will be moved to the front of the classpath."
  }];
}
